syntax = "proto3";

package mu.micro.book.user.srv.service;

service User {
    rpc QueryUserByName (Request) returns (Response) {}// 
}

message user {
    uint64 id = 1; //
    string name = 2;
    string pwd = 3;
    uint64 createdTime = 4;
    uint64 updatedTime = 5;
}


message Request {
    string userID = 1;
    string userName = 2;
    string userPwd = 3;
}

message Response {
    BaseResponse baseResponse = 1;
    user user = 2;
}


message Error{
    int32 code = 1;
    string message = 2;
}

message BaseResponse{
    bool success = 1;
    Error error = 2;
}